tests/snapshots/test_attribute__meta_item_name_value-2.snap
---
created: "2019-04-06T05:46:03.311318597Z"
creator: insta@0.7.4
source: tests/test_attribute.rs
expression: syntax_tree
---
NameValue(
    MetaNameValue {
        ident: Ident(
            foo,
        ),
        eq_token: Eq,
        lit: Int(
            LitInt {
                token: Literal {
                    lit: 5,
                },
            },
        ),
    },
)
