tests/snapshots/test_attribute__meta_item_name_value.snap
---
created: "2019-03-17T19:07:57.587013100Z"
creator: insta@0.7.1
source: tests/test_attribute.rs
expression: syntax_tree
---
NameValue(
    MetaNameValue {
        path: Path {
            leading_colon: None,
            segments: [
                PathSegment {
                    ident: Ident(
                        foo
                    ),
                    arguments: None
                }
            ]
        },
        eq_token: Eq,
        lit: Int(
            LitInt {
                token: Literal {
                    lit: 5
                }
            }
        )
    }
)
