tests/snapshots/test_attribute__meta_item_name_value_leading_colon-2.snap
---
created: "2019-03-17T19:29:17.436547Z"
creator: insta@0.7.1
source: tests/test_attribute.rs
expression: syntax_tree
---
NameValue(
    MetaNameValue {
        path: Path {
            leading_colon: Some(
                Colon2
            ),
            segments: [
                PathSegment {
                    ident: Ident(
                        foo
                    ),
                    arguments: None
                },
                Colon2,
                PathSegment {
                    ident: Ident(
                        bar
                    ),
                    arguments: None
                }
            ]
        },
        eq_token: Eq,
        lit: Int(
            LitInt {
                token: Literal {
                    lit: 5
                }
            }
        )
    }
)
