tests/snapshots/test_attribute__meta_item_path.snap
---
created: "2019-03-17T19:23:24.185254Z"
creator: insta@0.7.1
source: tests/test_attribute.rs
expression: syntax_tree
---
Path(
    Path {
        leading_colon: None,
        segments: [
            PathSegment {
                ident: Ident(
                    foo
                ),
                arguments: None
            }
        ]
    }
)
